--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                         <h1 class="logo-title">William Ivanski</h1>
                         <h2 class="logo-tagline">Desenvolvendo código de qualidade desde 2006</h2>
                     </div>
+					<a target="_blank" rel="noopener noreferrer" href="https://mvp.microsoft.com/pt-br/PublicProfile/5002391"><img class="logo-image" src="img/mvp.png" alt="MVP"/></a>
                 </div>
             </a>
 	</div>
@@ -83,7 +84,8 @@
                 <p>Sou formado em <em>Ciência da Computação</em> pela Universidade Federal do Paraná (<a target="_blank" rel="noopener noreferrer" href="http://www.ufpr.br">UFPR</a>). Meu trabalho de conclusão de curso foi na área de Visão Computacional, onde desenvolvi um sistema para rastreamento e armazenamento de histórico de partidas de xadrez utilizando <em>webcams</em> de baixa qualidade.</p>
                 <p>De 2009 a 2012, trabalhei na empresa <a target="_blank" rel="noopener noreferrer" href="http://www.adsistem.com.br">Adsistem Sistemas Administrativos</a>, onde me especializei no desenvolvimento de relatórios dos mais variados tipos, incluindo relatórios gerenciais e de BI (<em>Business Intelligence</em>, ou Inteligência de Negócio). Também adquiri um conhecimento profundo em desenvolvimento para bancos de dados e para Web.</p>
                 <p>Desde 2012 trabalho na empresa <a target="_blank" rel="noopener noreferrer" href="http://www.planningservice.com.br">Planning Service Transfer Pricing</a>, onde adquiri muita experiência na parte de administração de bancos de dados, administração de redes e servidores Linux, e também como gerente de projetos de desenvolvimento.</p>
-                <p>Agradeço a Deus e à minha família, sem a qual todas as minhas conquistas técnicas e profissionais teriam sido muito mais difíceis. Minha esposa chama-se Pollyanna, e temos uma filha chamada Alice. A experiência de estar casado e ser pai é impressionante, muito mais valiosa do que qualquer diploma ou reconhecimento profissional. Sou muito grato a toda a paz, todo carinho e todo o amor que essas duas almas me proporcionam todos os dias. E com isso elas me fazem crescer, querer ser cada dia um marido melhor, um pai melhor, e tudo isso acaba se refletindo em como eu sou para a minha profissão e para a própria sociedade.</p>
+                <p>Em 2017 fui prestigiado com o <em><a target="_blank" rel="noopener noreferrer" href="https://mvp.microsoft.com/pt-br/PublicProfile/5002391">Microsoft MVP Award</a></em>, que reconhece líderes independentes de comunidade, profissionais empenhados que disseminam conhecimento técnico e ajudam pessoas sem esperar nada em troca. Eles compartilham sua paixão excepcional, o conhecimento do mundo real, e conhecimentos técnicos com a comunidade. Me sinto muito honrado por ser considerado um MVP.</p>
+				<p>Agradeço a Deus e à minha família, sem a qual todas as minhas conquistas técnicas e profissionais teriam sido muito mais difíceis. Minha esposa chama-se Pollyanna, e temos uma filha chamada Alice. A experiência de estar casado e ser pai é impressionante, muito mais valiosa do que qualquer diploma ou reconhecimento profissional. Sou muito grato a toda a paz, todo carinho e todo o amor que essas duas almas me proporcionam todos os dias. E com isso elas me fazem crescer, querer ser cada dia um marido melhor, um pai melhor, e tudo isso acaba se refletindo em como eu sou para a minha profissão e para a própria sociedade.</p>
             </article>
             <!--<hr class="mh-separator">-->
         </div>
@@ -99,6 +101,7 @@
             <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Posts Recentes</span></h4>
                 <ul class="mh-rp-widget widget-list">
+					<li class="rp-widget-item"><a href="blog/post20161206.html">Python for .NET</a></li>
 					<li class="rp-widget-item"><a href="blog/post20161111.html">Instalando PostgreSQL 9.5 ou 9.6 no Debian Jessie</a></li>
 					<li class="rp-widget-item"><a href="blog/post20160928.html">Corrigindo bug "ASP.NET add-in not found" do MonoDevelop no Ubuntu 16.04</a></li>
                     <li class="rp-widget-item"><a href="blog/post20160905.html">Corrigindo ou removendo painéis no KDE Plasma 5</a></li>
