--- a/curso.html
+++ b/curso.html
@@ -45,6 +45,7 @@
                         <h1 class="logo-title">William Ivanski</h1>
                         <h2 class="logo-tagline">Desenvolvendo código de qualidade desde 2006</h2>
                     </div>
+					<a target="_blank" rel="noopener noreferrer" href="https://mvp.microsoft.com/pt-br/PublicProfile/5002391"><img class="logo-image" src="img/mvp.png" alt="MVP"/></a>
                 </div>
             </a>
 	</div>
@@ -98,11 +99,12 @@
             <div class="entry-content clearfix">
                 <p><b>Quem sou eu?</b></p>
                 <ul>
-                    <li>Bacharel em Ciência da Computação pela UFPR</li>
                     <li>Programador profissional</li>
-                    <li>Há 7 anos com bancos de dados</li>
-                    <li>Há 6 anos com C#</li>
-                    <li>Há 5 anos com ASP.NET</li>
+					<li>Microsoft MVP</li>
+					<li>Bacharel em Ciência da Computação pela UFPR</li>
+                    <li>Há 8 anos com bancos de dados</li>
+                    <li>Há 7 anos com C#</li>
+                    <li>Há 6 anos com ASP.NET</li>
                 </ul>
                 <p><b>Como está dividido o curso?</b></p>
                 <ul>
