Meta Tag para Google Analytics

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="X4qZK3nXJs4Ddmg6hMPPM-PNokzY_G6T0lAMlpCYKvI" />
 
 <title>William Ivanski</title>
 <link rel="shortcut icon" type="image/x-icon" href="img/logo.ico" />
