Organizando Modulos IV e V e Oficina 1

--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
                                 <li class="page_item"><a href="modulo1.html">Módulo I: C# Básico</a></li>
                                 <li class="page_item"><a href="modulo2.html">Módulo II: C# Intermediário</a></li>
                                 <li class="page_item"><a href="modulo3.html">Módulo III: Bancos de Dados</a></li>
-                                <li class="page_item"><a href="modulo4.html">Módulo IV: C# Avançado</a></li>
+                                <li class="page_item"><a href="modulo4.html">Módulo IV: ASP.NET</a></li>
+                                <li class="page_item"><a href="modulo5.html">Módulo V: C# Avançado</a></li>
+                            </ul>
+                        </li>
+						<li class="page_item page_item_has_children"><a href="oficinas.html">Oficinas</a>
+                            <ul class='children'>
+                                <li class="page_item"><a href="oficina1.html">Oficina I: Linux Básico</a></li>
                             </ul>
                         </li>
                         <li class="page_item"><a href="blog.html">Dicas &#038; Blog</a></li>
