--- a/index.html
+++ b/index.html
@@ -101,16 +101,9 @@
         </div>
 	<aside class="mh-sidebar">
             <div class="sb-widget clearfix">
-                <h4 class="widget-title"><span>Projetos</span></h4>
-                <ul class="mh-rp-widget widget-list">
-                    <li class="rp-widget-item"><a href="curso.html">Curso de Programação C#</a></li>
-                    <li class="rp-widget-item"><a href="spartacus.html">Spartacus</a></li>
-                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
-                </ul>
-            </div>
-            <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Posts Recentes</span></h4>
                 <ul class="mh-rp-widget widget-list">
+					<li class="rp-widget-item"><a href="blog/post20170112.html">Sou Microsoft MVP!</a></li>
 					<li class="rp-widget-item"><a href="blog/post20161206.html">Python for .NET</a></li>
 					<li class="rp-widget-item"><a href="blog/post20161111.html">Instalando PostgreSQL 9.5 ou 9.6 no Debian Jessie</a></li>
 					<li class="rp-widget-item"><a href="blog/post20160928.html">Corrigindo bug "ASP.NET add-in not found" do MonoDevelop no Ubuntu 16.04</a></li>
@@ -120,6 +113,14 @@
                 </ul>
             </div>
             <div class="sb-widget clearfix">
+                <h4 class="widget-title"><span>Projetos</span></h4>
+                <ul class="mh-rp-widget widget-list">
+                    <li class="rp-widget-item"><a href="curso.html">Curso de Programação C#</a></li>
+                    <li class="rp-widget-item"><a href="spartacus.html">Spartacus</a></li>
+                    <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="http://www.omnidb.com.br/pt_index.aspx">OmniDB</a></li>
+                </ul>
+            </div>
+			<div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Parceiros</span></h4>
                 <ul class="mh-rp-widget widget-list">
                     <li class="rp-widget-item"><a target="_blank" rel="noopener noreferrer" href="http://www.planningservice.com.br">Planning Service Transfer Pricing</a></li>
