--- a/oficina1.html
+++ b/oficina1.html
@@ -97,7 +97,7 @@
                         <td rowspan=1>Slides</td>
                         <td rowspan=1></td>
                         <td rowspan=1></td>
-                        <td></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/TXgZFlseoFE">Videoaula 28/01/2017</a></td>
                     </tr>
                     
                     <!-- capitulo 2 -->
