--- a/oficina1.html
+++ b/oficina1.html
@@ -93,12 +93,15 @@
                 <table>
                     <!-- capitulo 1 -->
                     <tr>
-                        <td rowspan=1>Cap&iacute;tulo 1 - Introdu&ccedil;&atilde;o ao Linux</td>
-                        <td rowspan=1>Slides</td>
-                        <td rowspan=1></td>
-                        <td rowspan=1></td>
+                        <td rowspan=2>Cap&iacute;tulo 1 - Introdu&ccedil;&atilde;o ao Linux</td>
+                        <td rowspan=2><a href="curso/oficina1capitulo1.pptx">Slides</a></td>
+                        <td rowspan=2></td>
+                        <td rowspan=2></td>
                         <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/TXgZFlseoFE">Videoaula 28/01/2017</a></td>
                     </tr>
+					<tr>
+						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/q-AvyqEituc">Videoaula 04/02/2017</a></td>
+					</tr>
                     
                     <!-- capitulo 2 -->
                     <tr>
