--- a/oficina1.html
+++ b/oficina1.html
@@ -94,7 +94,7 @@
                     <!-- capitulo 1 -->
                     <tr>
                         <td rowspan=2>Cap&iacute;tulo 1 - Introdu&ccedil;&atilde;o ao Linux</td>
-                        <td rowspan=2><a href="curso/oficina1capitulo1.pptx">Slides</a></td>
+                        <td rowspan=2><a href="oficina/oficina1capitulo1.pptx">Slides</a></td>
                         <td rowspan=2></td>
                         <td rowspan=2></td>
                         <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/TXgZFlseoFE">Videoaula 28/01/2017</a></td>
