--- a/oficina1.html
+++ b/oficina1.html
@@ -106,10 +106,10 @@
                     <!-- capitulo 2 -->
                     <tr>
                         <td rowspan=1>Cap&iacute;tulo 2 - Instalação</td>
-                        <td rowspan=1>Slides</td>
-                        <td rowspan=1>Exerc&iacute;cios</td>
-                        <td rowspan=1>Respostas</td>
-                        <td></td>
+                        <td rowspan=1><a href="oficina/oficina1capitulo2.pptx">Slides</a></td>
+                        <td rowspan=1></td>
+                        <td rowspan=1></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/wPkF3qTLOSw">Videoaula 11/02/2017</a></td>
                     </tr>
                     
 					<!-- capitulo 3 -->
