--- a/oficina1.html
+++ b/oficina1.html
@@ -118,7 +118,7 @@
                         <td rowspan=1>Slides</td>
                         <td rowspan=1>Exerc&iacute;cios</td>
                         <td rowspan=1>Respostas</td>
-                        <td></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/zGpAYKsY2Ek">Videoaula 18/02/2017</a></td>
                     </tr>
 					
                     <!-- avaliacao 1 -->
