Alteracoes para proxima aula

--- a/oficinas/oficina1lista3.html
+++ b/oficinas/oficina1lista3.html
@@ -81,5 +81,35 @@
   <p>
    16) Que comando você usaria para remover o arquivo <tt><b>meu_arquivo</b></tt> ?
   </p>
+  <p>
+   17) Que comando você usaria para remover o diretório <tt><b>meu_diretorio</b></tt>, sabendo que está vazio?
+  </p>
+  <p>
+   18) Que comando você usaria para remover o diretório <tt><b>meu_diretorio</b></tt>, independentemente do fato de estar vazio ou não?
+  </p>
+  <p>
+   19) Qual(is) comando(s) você usaria para compactar uma <tt><b>pasta</b></tt> em um <tt><b>arquivo.zip</b></tt>?
+  </p>
+  <p>
+   20) Qual(is) comando(s) você usaria para descompactar um <tt><b>arquivo.zip</b></tt>?
+  </p>
+  <p>
+   21) Qual(is) comando(s) você usaria para empacotar uma <tt><b>pasta</b></tt> em um <tt><b>arquivo.tar</b></tt>?
+  </p>
+  <p>
+   22) Qual(is) comando(s) você usaria para desempacotar um <tt><b>arquivo.tar</b></tt>?
+  </p>
+  <p>
+   23) Qual(is) comando(s) você usaria para compactar uma <tt><b>pasta</b></tt> em um <tt><b>arquivo.tgz</b></tt>?
+  </p>
+  <p>
+   24) Qual(is) comando(s) você usaria para descompactar um <tt><b>arquivo.tgz</b></tt>?
+  </p>
+  <p>
+   25) Qual(is) comando(s) você usaria para compactar uma <tt><b>pasta</b></tt> em um <tt><b>arquivo.tar.gz</b></tt>?
+  </p>
+  <p>
+   26) Qual(is) comando(s) você usaria para descompactar um <tt><b>arquivo.tar.gz</b></tt>?
+  </p>
  </body>
 </html>
