--- a/modulo4.html
+++ b/modulo4.html
@@ -95,10 +95,10 @@
                     <!-- capitulo 1 -->
                     <tr>
                         <td rowspan=1>Cap&iacute;tulo 1 - Introdução</td>
-                        <td rowspan=1>Slides</td>
+                        <td rowspan=1><a href="curso/modulo4capitulo1.pptx">Slides</a></td>
                         <td rowspan=1></td>
                         <td rowspan=1></td>
-                        <td></td>
+                        <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/qY9KUNw2dxo">Videoaula 04/03/2017</a></td>
                     </tr>
 
                     <!-- capitulo 2 -->
