--- a/oficina1.html
+++ b/oficina1.html
@@ -114,14 +114,17 @@
                     
 					<!-- capitulo 3 -->
                     <tr>
-                        <td rowspan=2>Cap&iacute;tulo 3 - Terminal</td>
-                        <td rowspan=2>Slides</td>
-                        <td rowspan=2>Exerc&iacute;cios</td>
-                        <td rowspan=2>Respostas</td>
+                        <td rowspan=3>Cap&iacute;tulo 3 - Terminal</td>
+                        <td rowspan=3>Slides</td>
+                        <td rowspan=3>Exerc&iacute;cios</td>
+                        <td rowspan=3>Respostas</td>
                         <td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/zGpAYKsY2Ek">Videoaula 18/02/2017</a></td>
                     </tr>
 					<tr>
 						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/r0tKvdkfBAM">Videoaula 25/02/2017</a></td>
+					</tr>
+					<tr>
+						<td><a target="_blank" rel="noopener noreferrer" href="https://youtu.be/oujSP0_AeVA">Videoaula 04/03/2017</a></td>
 					</tr>
 					
                     <!-- avaliacao 1 -->
